# littlec

./: .project  Makefile.am  README.md  cleverbuild  configure.ac  lclib.c  littlec.c  parser.c  test.c  tst.c
